# rag-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.cursor/plans/: proxy-pointer-rag-main.plan.md  proxy-pointer_rag-mal_08dfe974.plan.md
.cursor/rules/: proxy-pointer-rag-mal.mdc
app/: container.py  main.py
app/api/: routes.py  schemas.py
benchmarks/: model_matrix.yaml  questions.yaml  run_matrix.py
core/: __init__.py  mcp_server.py
core/application/benchmarking/: judge.py  models.py  runner.py
core/application/indexing/: chunking.py  markdown_parser.py  models.py  noise_filter.py  use_case.py
core/application/ports/: __init__.py  embeddings.py  llm.py  pdf_extractor.py  section_source.py  vector_store.py
core/application/query/: models.py  use_case.py
core/config/: settings.py
core/domain/: models.py
core/infrastructure/embeddings/: registry.py
core/infrastructure/embeddings/providers/: __init__.py  hash.py  ollama.py  openai_compatible.py
core/infrastructure/extraction/: llamaparse_pdf_extractor.py
core/infrastructure/llm/: json_utils.py  registry.py
core/infrastructure/llm/providers/: anthropic.py  echo.py  ollama.py  openai_compatible.py
core/infrastructure/persistence/: chroma_vector_store.py  faiss_vector_store.py  in_memory_section_store.py  in_memory_vector_store.py  json_section_store.py
rag_template_core/application/benchmarking/: __init__.py  runner.py
rag_template_core/application/indexing/: chunking.py  markdown_parser.py  noise_filter.py  use_case.py
rag_template_core/application/ports/: llm.py  section_source.py  vector_store.py
rag_template_core/application/query/: use_case.py
rag_template_core/infrastructure/embeddings/: registry.py
rag_template_core/infrastructure/embeddings/providers/: hash.py  ollama.py  openai_compatible.py
rag_template_core/infrastructure/extraction/: llamaparse_pdf_extractor.py
rag_template_core/infrastructure/llm/: registry.py
rag_template_core/infrastructure/llm/providers/: anthropic.py  echo.py  ollama.py  openai_compatible.py
rag_template_core/infrastructure/persistence/: faiss_vector_store.py  in_memory_section_store.py  in_memory_vector_store.py  json_section_store.py
tests/: test_api.py  test_benchmark.py  test_chroma_vector_store.py  test_container_files.py  test_indexing_and_query.py  test_markdown_parser.py  test_mcp_server.py  test_ollama_embedder.py  test_settings_and_registries.py  test_vector_store.py
